# mvp101

./: .gitignore  DEVELOPER_GUIDE.md  PROJECT_TODO.md  README.md  check_dist.py  clear_redis.py  clear_redis_keys.py  cookies.txt  database_code_imp.txt  debug_coordinates.py  debug_payload.json  nearest_pois.kmz  pyproject.toml  requirements.txt  test_payload.json  vercel.json
app/: logging.py  main.py
app/api/: routes.py
app/core/: config.py  middleware.py
app/middleware/: logging.py
app/models/: dto.py
app/services/: area_bucketer.py  entitlement_service.py  geocoding.py  i18n.py  kmz_service.py  poi_service.py  policy_engine.py  quota_repository.py  redis_client.py
app/utils/: haversine.py  security.py
static/: masterlist.json  offline.html  privacy.html  sw.js
templates/: index.html
