[project]
name = "geo-proximity-lead-magnet"
version = "1.0.0"
description = "A lightweight, serverless web application for finding the 5 nearest construction/real-estate points of interest in Da Nang, Vietnam."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.8.2",
    "pydantic-settings==2.3.4",
    "httpx==0.27.0",
    "fastkml==0.12",
    "Jinja2==3.1.4",
    "python-dotenv==1.0.1",
    "setuptools",
    "redis>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
